--- a/css web tech/MainStyle.css
+++ b/css web tech/MainStyle.css
@@ -1,7 +1,7 @@
 .navigation{
     list-style: none;
     margin: 0;
-    background: black;
+    background: darkred;
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
@@ -10,7 +10,7 @@
     text-decoration: none;
     display: block;
     padding: 10px;
-    color: crimson;
+    color: white;
 }
 .navigation a:hover {
     background: black;
@@ -29,6 +29,7 @@
 }
 .navigation a{
     text-align: center;
+    ext-transform: uppercase;
     padding: 10px;
     border-left:1px solid red ;
     border-right: 1px solid red;
