--- a/css web tech/troubleStyle.css
+++ b/css web tech/troubleStyle.css
@@ -1,10 +1,10 @@
 .navigation{
     list-style: none;
     margin: 0;
-    background:darkerd;
+    background: darkred;
     display: flex;
     flex-flow: row wrap;
-    justify-content: flex-end;
+    justify-content: flex-start;
 }
 .navigation a {
     text-decoration: none;
